--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: His-to-fly_75041
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 75041-h/images/cover.jpg
 creator:
   author:
     agent_name: Watkins, Richard Howells
@@ -7,6 +10,8 @@ creator:
     gutenberg_agent_id: '57087'
     url: http://www.gutenberg.org/2009/agents/57087
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/75041#His-to-fly
 gutenberg_issued: '2025-01-05'
 gutenberg_type: Text
 identifiers:
